manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donation-service
  namespace: solidarytech-donation
  labels:
    app.kubernetes.io/name: donation-service
    app.kubernetes.io/component: donation
    app.kubernetes.io/part-of: solidarytech
spec:
  type: ClusterIP
  selector:
    app: donation-service
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
